# octopus-agile-dashboard

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  DEPENDENCY_AUDIT.md  Makefile  README.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20241230_000000_initial_schema.py
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  analysis.py  consumption.py  live.py  prices.py
backend/app/core/: __init__.py  cache.py  config.py
backend/app/db/: __init__.py  database.py  models.py
backend/app/services/: __init__.py  calculations.py  octopus_api.py  octopus_graphql.py
docs/: API.md  DEPLOYMENT.md  LIVE-MONITORING.md
frontend/: .prettierignore  .prettierrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  global.d.ts  index.css
frontend/src/components/: AgileComparison.tsx  CurrentPrice.tsx  DataTable.tsx  LiveConsumptionChart.tsx  LiveCostTracker.tsx  LiveDemand.tsx  LiveTab.tsx  PriceChart.tsx  StatsCards.tsx
frontend/src/hooks/: index.ts
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: formatters.ts
scripts/: cleanup_old_data.sh  fetch_consumption.sh  fetch_prices.sh  purge.sh  setup_raspberry_pi.sh
terraform/: .gitignore  README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf
terraform/modules/compute/: main.tf  outputs.tf  variables.tf
terraform/modules/database/: main.tf  outputs.tf  variables.tf
terraform/modules/monitoring/: main.tf  outputs.tf  variables.tf
terraform/modules/network/: main.tf  outputs.tf  variables.tf
terraform/modules/secrets/: main.tf  outputs.tf  variables.tf
terraform/scripts/: cloud-init.yaml
